# langchain-academy

./: pyproject.toml
module-1/studio/: agent.py  agent1.py  aws_mcp.py  mcp.json
module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  time-travel.ipynb
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-5/: memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
